# autostruct

./: .env  .gitignore  Cargo.toml  Makefile  README.md
examples/: generate.rs
src/: cli.rs  generator.rs  lib.rs  main.rs  rust.rs
src/database/: convert.rs  mod.rs  postgres.rs  raw_schema.rs  schema.rs  table_column.rs  table_info_provider.rs
src/generator/: code.rs  generate.rs  mod.rs  run.rs  runner.rs  utils.rs
tests/: migrate.rs  runner.rs  setup_postgres.rs
tests/postgres/: mod.rs
tests/postgres/migrations/: 01_postgres.up.sql  postgres_test.sql
