[package]
name = "autostruct"
version = "0.1.0"
edition = "2021"
description = "A tool for generating Rust structs from database schemas"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
async-trait = "0.1.80"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.4", features = ["derive", "env"] }
cruet = "0.14.0"
dotenvy = "0.15.7"
geo-types = "0.7.15"
humantime = "2.2.0"
ipnetwork = "0.20"
mac_address = "1.1.8"
postgis = "0.9"
postgres-types = { version = "0.2", features = ["derive", "with-uuid-1", "with-time-0_3", "with-chrono-0_4"] }
rust_decimal = "1.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "rust_decimal", "time", "ipnetwork", "mac_address", "bit-vec"] }
tokio = { version = "1.38.0", features = ["full"] }
uuid = { version = "1.7", features = ["serde", "v4"] }

[dev-dependencies]
testcontainers-modules = { version = "0.5.0", features = ["postgres"] }

[features]
postgres_test = []
